[package]
name = "npm-deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
simple_logger = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "5.0"
semver = "1.0"